tweak data features

--- a/themes/dohmh/layouts/data-features/hvi.html
+++ b/themes/dohmh/layouts/data-features/hvi.html
@@ -204,7 +204,7 @@
         </div>
         <!--End row-->
         
-        <div class="row">
+        <div class="row mt-2">
             <div class="col-lg-6 mx-auto">
                 <p>You can learn more about what the City is doing to address extreme heat and how the HVI is guiding that work in the <a href="https://climate.cityofnewyork.us/initiatives/planyc-getting-sustainability-done/">2023 PlaNYC: Getting Sustainability Done</a> report and at <a href="https://www1.nyc.gov/assets/orr/pdf/Cool_Neighborhoods_NYC_Report.pdf">Cool Neighborhoods NYC</a>. Communities can also use the index to advocate for services and resources.</p>
             </div>
@@ -212,7 +212,7 @@
         
         <div class="row mt-2 fs-sm">
             <div class="col-lg-6 mx-auto mt-2">
-                <div class="mt-2" style="background-color: #dcdcdc; padding: 7px 7px; border-radius: 5px;">
+                <div class="asidebox">
                     <p>In NYC, an <strong>extreme heat event</strong> is 2 or more days with a heat index reaching 95 °F, or 1 or more days reaching 100 °F.</p>
                     <p>To learn more about heat and health, visit <a href="https://www1.nyc.gov/site/doh/health/emergency-preparedness/emergencies-extreme-weather-heat.page">Extreme Heat and Health</a>. To stay safe in the heat, visit <a href="https://www1.nyc.gov/assets/em/html/beat-the-heat/beattheheat.html">Beat the Heat</a>.</p>
                 </div>
