--- a/themes/dohmh/layouts/data-features/syndromic.html
+++ b/themes/dohmh/layouts/data-features/syndromic.html
@@ -35,7 +35,7 @@
             </script>
 
             
-            <div class="mt-2 basic-callout p-2 fs-md">
+            <div class="mt-2 asidebox p-2 fs-md">
               <p>Extreme heat is dangerous. It can cause illness, make chronic conditions worse, and even kill. Heat-related illnesses - including  heat exhaustion, muscle cramps, fainting, and heat stroke (the most serious form) - happen when the body cannot cool down enough. Heat can also worsen chronic conditions, such as cardiovascular diseases or kidney conditions.</p>
 
               <p>In NYC, an <strong>extreme heat event</strong> is two or more days with a heat index reaching 95 °F, or one or more days reaching 100 °F.</p>
@@ -84,8 +84,11 @@
         <!-- scatterplot vis -->
       </div>
       
-      <div class="row my-4 fs-md" style="background-color: #f1f1f1; padding: 10px; border-radius: 5px;">
-        <p><strong>Daily temperature</strong>: The maximum daily temperature is the heat index or temperature, whichever is higher, as recorded by the National Weather Service weather station at La Guardia Airport.</p>
+      <div class="row my-4 fs-md">
+        <div class="col-12 asidebox">
+          <p><strong>Daily temperature</strong>: The maximum daily temperature is the heat index or temperature, whichever is higher, as recorded by the National Weather Service weather station at La Guardia Airport.</p>
+
+        </div>
       </div>
 
 
