--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -46,8 +46,8 @@
 
                 </div>
 
-                <div class="col-md-4 border-left">
-                    <div class="fs-sm">
+                <div class="col-md-4">
+                    <div class="fs-sm asidebox">
                         <h4>About the data</h4>
                         <p>Data are hourly measurements of PM2.5, in micrograms per cubic meter of air (µg/m<sup>3</sup>). External factors can sometimes affect monitor functioning. Data are preliminary and subject to change.</p>
             
@@ -194,8 +194,7 @@
                     <p>In NYC, about 30% of PM2.5 comes from far-away sources like coal-burning power plants
                         in the Midwest. But more than half comes from <b>local sources</b>. </p>
             
-                    <div class="card content-card mb-4">
-                        <div class="card-content">
+                    <div class="card card-left-border shadow-sm mb-4">
                             <div class="card-body">
                                 <h4 class="card-title">
                                     <i class="fas fa-building mr-1" aria-hidden="true"></i>Buildings
@@ -222,8 +221,6 @@
                                 <p>Truck traffic density affects a neighborhood's air quality because diesel combustion
                                     produces additional pollutants.</p>
                             </div>
-                        </div>
-            
                     </div>
                 </div>
         
@@ -231,8 +228,7 @@
                     <h3>Common patterns in the data</h3>
                     <p>There are several patterns that commonly show up in the data from our air quality monitors. Look at recent data for patterns that indicate:</p>
                     
-                    <div class="card content-card mb-4">
-                        <div class="card-content">
+                    <div class="card card-left-border shadow-sm mb-4">
                             <div class="card-body">
                                 <h4 class="card-title"><i class="fas fa-map-signs mr-1" aria-hidden="true"></i>Spatial differences</h4>
                                 <p>The monitors are in neighborhoods with different emissions sources, so have
@@ -256,7 +252,6 @@
                                     know what causes them. However, they can be explained by something as
                                     simple as a truck idling for a few minutes underneath the monitor.</p>
                             </div>
-                        </div>
                     </div>
                 </div>
         
