--- a/themes/dohmh/layouts/key-topics/healthy-homes-2.html
+++ b/themes/dohmh/layouts/key-topics/healthy-homes-2.html
@@ -46,7 +46,7 @@
             <a id="smokedetector_1Dot" onclick="smokedetector_1()" aria-label="..." style="position:absolute;top: 33%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#smokedetector_1Modal" ></a>
             <a id="stovespillDot" onclick="stovespill()" aria-label="..." style="position:absolute;top: 50%;left: 50%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#stovespillModal" ></a>
             <a id="shoesDot" onclick="shoes()" aria-label="..." style="position:absolute;top: 60%;left: 26%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#shoesModal" ></a>
-            <a id="shoesDot" onclick="pestdrop()" aria-label="..." style="position:absolute;top: 60%;left: 26%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#pestdropModal" ></a>
+            <a id="pestdropDot" onclick="pestdrop()" aria-label="..." style="position:absolute;top: 40%;left: 76%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#pestdropModal" ></a>
         </div>
     </div>
 </div>
@@ -146,7 +146,7 @@
 </div>
 
 <!-- Modals -->
-<div class="modal fade" id="pestdrop" tabindex="-1" role="dialog" aria-labelledby="pestdropDot" aria-hidden="true">
+<div class="modal fade" id="pestdropModal" tabindex="-1" role="dialog" aria-labelledby="pestdropDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -280,7 +280,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="bottleModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+  <div class="modal fade" id="bottleModal" tabindex="-1" role="dialog" aria-labelledby="bottleDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -301,7 +301,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+  <div class="modal fade" id="ceramicwareModal" tabindex="-1" role="dialog" aria-labelledby="ceramicwareDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -321,7 +321,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="peelingpaintModal" tabindex="-1" role="dialog" aria-labelledby="peelingpaintDot" aria-hidden="true">
+  <div class="modal fade" id="cleaners" tabindex="-1" role="dialog" aria-labelledby="cleanersDot" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
