--- a/themes/dohmh/layouts/key-topics/rmz.html
+++ b/themes/dohmh/layouts/key-topics/rmz.html
@@ -100,7 +100,7 @@
 
                     <div class="col-12 mt-4 border-top pt-1">
                         <h3 class="home-label font-weight-bold">Initial inspections</h3>
-                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Initial inspections</span> follow a 311 complaint, or are initiated proactively by the Health Department.  <span style="color: #c73866;font-weight:bold;">Properties that fail</span> may fail for active rat signs, garbage, or conditions that harbor rats. When a property fails an intiial inspection, the owner receives an abatement order.</p>
+                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Initial inspections</span> follow a 311 complaint, or are initiated proactively by the Health Department.  <span style="color: #c73866;font-weight:bold;">Properties that fail</span> may fail for active rat signs, garbage, or conditions that harbor rats. When a property fails an initial inspection, the owner receives an abatement order.</p>
                         <div style="width:100%; height: 200px;" id="vizTwo" class="pl-1">
                             <div style="background-color:#fafafa; height: 100%;">
                                 <span class="px-4 mt-4">Choose a zone to see data</span>
