basic checkbox structure

--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -79,6 +79,13 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="btnDropdownMenu" style="padding: 0px!important;">
                         </div>
                       </div>
+                      <div class="dropright">
+                        <button class="btn btn-outline-secondary btn-block btn-sm dropdown-toggle" type="button" id="checkboxMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Checkboxes
+                        </button>
+                        <div class="dropdown-menu p-1" aria-labelledby="checkboxMenu" id="btnCheckboxes" style="padding: 0px!important;">
+                        </div>
+                      </div>
                     <div id="map" class="d-none d-md-block">
                     </div>
                     <button onclick="restore()" type="button" id="btnrestore" class="btn btn-sm btn-outline-dark btn-block">
