re-layout; proper EL on checkboxes

--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -67,6 +67,28 @@
 
     {{- /* map + chart */}}
 
+    <div class="row my-4">
+        <div class="col-md-10 mx-auto col-sm-12 border">
+            <div class="row">
+                <div class="col-md-6 border">
+                    <div id="map2" class="d-none d-md-block">
+                        MAP
+                    </div>
+                </div>
+                <div class="col-md-6 border">
+                    <div id="btnCheckboxes">
+                    </div>
+                </div>
+        
+                <div class="col-12 border">
+                    <div id="vis" style="width: 100%; height: 350px;" class="mt-1">
+                        CHART
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
     <div class="row">
         <div class="col-md-10 mx-auto col-sm-12">
             <div class="row mt-4">
@@ -77,13 +99,6 @@
                           Choose location
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="btnDropdownMenu" style="padding: 0px!important;">
-                        </div>
-                      </div>
-                      <div class="dropright">
-                        <button class="btn btn-outline-secondary btn-block btn-sm dropdown-toggle" type="button" id="checkboxMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Checkboxes
-                        </button>
-                        <div class="dropdown-menu p-1" aria-labelledby="checkboxMenu" id="btnCheckboxes" style="padding: 0px!important;">
                         </div>
                       </div>
                     <div id="map" class="d-none d-md-block">
