checkbox and chart functionality

--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -67,6 +67,12 @@
 
     {{- /* map + chart */}}
 
+    <style>
+        label {
+        font-size: .875rem
+    }
+    </style>
+
     <div class="row my-4">
         <div class="col-md-10 mx-auto col-sm-12 border">
             <div class="row">
@@ -76,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 border">
-                    <div id="btnCheckboxes">
+                    <div id="btnCheckboxes" class="fs-sm">
                     </div>
                 </div>
         
