--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -85,7 +85,7 @@
         }
 
         .table-tight th {
-        border-top: 0px!important;
+        /* border-top: 0px!important; */
         }
 
 
