--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -126,12 +126,10 @@
                     </div>
                 </div>
                 <div class="col-md-8 border-left">
-                    <div id="map" class="d-none d-md-block">
-                        MAP
-                    </div>
+
 
                     <!-- Chart set -->
-                    <div style="width:100%" class="border-top mt-1">
+                    <div style="width:100%" class="">
 
                     <div id="numberinput" class="float-right pt-1"
                     style="font-size: 12px;">
@@ -146,6 +144,10 @@
                 
                     <div id="vis" style="width: 100%; height: 45vh;" class="mt-2">
                     CHART
+                    </div>
+
+                    <div id="map" class="d-none d-md-block">
+                        MAP
                     </div>
 
                 </div>
