--- a/themes/dohmh/layouts/key-topics/rmz.html
+++ b/themes/dohmh/layouts/key-topics/rmz.html
@@ -82,7 +82,7 @@
 
 
 
-                <div class="row mt-2">  
+                <div class="row">  
                     <div class="col-12 mt-2">
                         <em class="fs-sm">Data are for 6-month periods ending June 30th and December 31st of each year.</em>
                     </div>
@@ -100,7 +100,7 @@
 
                     <div class="col-12 mt-4 border-top pt-1">
                         <h3 class="home-label font-weight-bold">Initial inspections</h3>
-                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Initial inspections</span> follow a 311 complaint, or are initiated proactively by the Health Department.  <span style="color: #c73866;font-weight:bold;">Properties that fail</span> may fail for active rat signs, garbage, or conditions that harbor rats. When a property fails an initial inspection, the owner receives an abatement order.</p>
+                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Initial inspections</span> follow a 311 complaint, or are initiated proactively by the Health Department.  <span style="color: #c73866;font-weight:bold;">Properties that fail</span> may fail for <span style="color:#D77393;font-weight:bold;">active rat signs</span>, garbage, or conditions that harbor rats. When a property fails an initial inspection, the owner receives an abatement order.</p>
                         <div style="width:100%; height: 200px;" id="vizTwo" class="pl-1">
                             <div style="background-color:#fafafa; height: 100%;">
                                 <span class="px-4 mt-4">Choose a zone to see data</span>
@@ -113,7 +113,7 @@
 
                     <div class="col-12 mt-4 border-top pt-1">
                         <h3 class="home-label font-weight-bold">Compliance inspections</h3>
-                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Compliance inspections</span>  follow failed initial inspections, 2 to 3 weeks after an abatement order. If a property <span style="color: #c73866;font-weight:bold;">fails a compliance inspection</span>, the owner is issued a summons.</p>
+                        <p class="fs-sm"><span style="color: #00008B;font-weight:bold;">Compliance inspections</span>  follow failed initial inspections, 2 to 3 weeks after an abatement order. If a property <span style="color: #c73866;font-weight:bold;">fails a compliance inspection</span>, the owner is issued a summons. A property may fail for <span style="color:#D77393;font-weight:bold;">active rat signs</span>, garbage, or conditions that harbor rats. </p>
                         <div style="width:100%; height: 200px;" id="vizThree" class="pl-1">
                             <div style="background-color:#fafafa; height: 100%;">
                                 <span class="px-4 mt-4">Choose a zone to see data</span>
