--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -222,23 +222,43 @@
                                     are now indetectable. <a href="../nyccas">Read more at
                                         the NYCCAS annual report</a>. </p>
                 
-                                <h4 class="card-title"><i class="fas fa-industry mr-1" aria-hidden="true"></i>Industrial area
-                                </h4>
-                                <p> Industrial areas affect a neighborhood's air quality because of diesel exhaust from
-                                    trucks idling and traveling through industrial areas, and from industrial combustion
-                                    equipment.</p>
-                
-                                <h4 class="card-title"> <i class="fas fa-car mr-1" aria-hidden="true"></i>Traffic</h4>
-                                <p> Traffic density affects a neighborhood's air quality because engines produce PM2.5,
-                                    black carbon, and NOx. While electric vehicles help reduce emissions, all vehicles also
-                                    contribute to PM2.5 through tire wear and braking. Traffic volume is one reason we often
-                                    see daily spikes in PM2.5 concentration in the mornings and evenings.</p>
-                
-                                <h4 class="card-title"><i class="fas fa-truck mr-1" aria-hidden="true"></i>Trucks</h4>
-                                <p>Truck traffic density affects a neighborhood's air quality because diesel combustion
-                                    produces additional pollutants.</p>
                             </div>
                     </div>
+
+                    <div class="card card-left-border shadow-sm mb-4">
+                        <div class="card-body">
+
+                            <h4 class="card-title"><i class="fas fa-industry mr-1" aria-hidden="true"></i>Industrial area
+                            </h4>
+                            <p> Industrial areas affect a neighborhood's air quality because of diesel exhaust from
+                                trucks idling and traveling through industrial areas, and from industrial combustion
+                                equipment.</p>
+            
+
+                        </div>
+                </div>
+
+                <div class="card card-left-border shadow-sm mb-4">
+                    <div class="card-body">
+
+        
+                        <h4 class="card-title"> <i class="fas fa-car mr-1" aria-hidden="true"></i>Traffic</h4>
+                        <p> Traffic density affects a neighborhood's air quality because engines produce PM2.5,
+                            black carbon, and NOx. While electric vehicles help reduce emissions, all vehicles also
+                            contribute to PM2.5 through tire wear and braking. Traffic volume is one reason we often
+                            see daily spikes in PM2.5 concentration in the mornings and evenings.</p>
+        
+
+                    </div>
+            </div>
+
+            <div class="card card-left-border shadow-sm mb-4">
+                <div class="card-body">
+                    <h4 class="card-title"><i class="fas fa-truck mr-1" aria-hidden="true"></i>Trucks</h4>
+                    <p>Truck traffic density affects a neighborhood's air quality because diesel combustion
+                        produces additional pollutants.</p>
+                </div>
+        </div>
                 </div>
         
                 <div class="col-md-6 col-sm-12">
@@ -251,25 +271,46 @@
                                 <p>The monitors are in neighborhoods with different emissions sources, so have
                                     different PM2.5 levels. <span style="color:rgb(109, 109, 109)"><b>Midtown</b></span>, which has
                                     the highest traffic density, usually has the most PM2.5. </p>
-                
-                                <h4 class="card-title"><i class="fas fa-chart-line mr-1" aria-hidden="true"></i>Daily spikes
-                                </h4>
-                                <p>PM2.5 levels usually rise in the morning as traffic volume increases. These
-                                    <em>temporal</em> differences (time spikes) are usually greater than
-                                    <em>spatial</em> differences (the differences between neighborhoods). It's very rare for these spikes to exceed the <a href="https://www.epa.gov/criteria-air-pollutants/naaqs-table">National Ambient Air Quality Standard</a> of 35 μg/m<sup>3</sup> for 24 hours.</p>
-                
-                                <h4 class="card-title"> <i class="fas fa-cloud-showers-heavy mr-1" aria-hidden="true"></i>Weather patterns</h4>
-                                <p> Weather can trap emissions and cause PM2.5 to build up. Sometimes we see a
-                                    clear west-to-east pattern in rising PM2.5, as weather
-                                    patterns moving into NYC traps local emissions. Other times, weather can bring wildfire smoke from far-away fires.</p>
-                
-                                <h4 class="card-title"><i class="fas fa-exclamation-triangle mr-1" aria-hidden="true"></i>Other spikes</h4>
-                                <p>Sometimes there are dramatic, short-term spikes
-                                    at unexpected times, and without having a camera on each monitor, we don't
-                                    know what causes them. However, they can be explained by something as
-                                    simple as a truck idling for a few minutes underneath the monitor.</p>
+            
                             </div>
                     </div>
+
+                    <div class="card card-left-border shadow-sm mb-4">
+                        <div class="card-body">
+
+            
+                            <h4 class="card-title"><i class="fas fa-chart-line mr-1" aria-hidden="true"></i>Daily spikes
+                            </h4>
+                            <p>PM2.5 levels usually rise in the morning as traffic volume increases. These
+                                <em>temporal</em> differences (time spikes) are usually greater than
+                                <em>spatial</em> differences (the differences between neighborhoods). It's very rare for these spikes to exceed the <a href="https://www.epa.gov/criteria-air-pollutants/naaqs-table">National Ambient Air Quality Standard</a> of 35 μg/m<sup>3</sup> for 24 hours.</p>
+            
+
+                        </div>
+                </div>
+
+                <div class="card card-left-border shadow-sm mb-4">
+                    <div class="card-body">
+        
+                        <h4 class="card-title"> <i class="fas fa-cloud-showers-heavy mr-1" aria-hidden="true"></i>Weather patterns</h4>
+                        <p> Weather can trap emissions and cause PM2.5 to build up. Sometimes we see a
+                            clear west-to-east pattern in rising PM2.5, as weather
+                            patterns moving into NYC traps local emissions. Other times, weather can bring wildfire smoke from far-away fires.</p>
+        
+
+                    </div>
+            </div>
+
+            <div class="card card-left-border shadow-sm mb-4">
+                <div class="card-body">
+    
+                    <h4 class="card-title"><i class="fas fa-exclamation-triangle mr-1" aria-hidden="true"></i>Other spikes</h4>
+                    <p>Sometimes there are dramatic, short-term spikes
+                        at unexpected times, and without having a camera on each monitor, we don't
+                        know what causes them. However, they can be explained by something as
+                        simple as a truck idling for a few minutes underneath the monitor.</p>
+                </div>
+        </div>
                 </div>
         
             </div>
