--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -118,6 +118,8 @@
                         </tbody>
                     </table>
                         <p class="fs-sm hide" id="exceeds" style="color:red;"><i class="fas fa-exclamation-circle mr-1"></i>Exceeds NAAQS 24-hour standard</p>
+                        <p class="fs-sm" id="allUnder" style="color:green;"><i class="fas fa-check-circle mr-1"></i>All levels are below the NAAQS 24-hour standard (35 µg/m<sup>3</sup>)</p>
+
                         <p class="fs-xs hide" id="insufficient"><em>*Monitor reported less than 18 hours in the last day.</em></p>
                     <a href="#table24" class="fs-sm btn btn-sm btn-light btn-block mb-2" onclick="resetZoom()">Clear all</a>
                     <hr class="mb-2">
